--- a/Night Owl/Debug.xcconfig
+++ b/Night Owl/Debug.xcconfig
@@ -10,3 +10,5 @@ PARSE_APPLICATION_ID = 0bzu64ADBGuHKglFYiCTYKR7tFZVaepLxVT1HXYe
 PARSE_CLIENT_KEY = 1VcBDc3O8TogJPqCbiZbfz9zezfI9HaYSHKgRLvG
 
 STRIPE_CLIENT_KEY = pk_test_CGHNSOCqTCmI1Gmng9hnBq9L
+
+BUILD_TYPE = debug
