--- a/Night Owl/Release.xcconfig
+++ b/Night Owl/Release.xcconfig
@@ -6,7 +6,9 @@
 //  Copyright (c) 2015 Brian Vallelunga. All rights reserved.
 //
 
-PARSE_APPLICATION_ID = 0bzu64ADBGuHKglFYiCTYKR7tFZVaepLxVT1HXYe
-PARSE_CLIENT_KEY = 1VcBDc3O8TogJPqCbiZbfz9zezfI9HaYSHKgRLvG
+PARSE_APPLICATION_ID = do9I872HqE4J67MwcN1nu1QJ9K9pjGa2eQg95Tit
+PARSE_CLIENT_KEY = 6Nev6Ru5wN1p9fhAWsYVWw7SFPEVDfyUKbDLJv3Y
 
 STRIPE_CLIENT_KEY = pk_live_L5IldWkSrm5FdCv1oTc5x59j
+
+BUILD_TYPE = release
