a bunch of small changes

--- a/Night Owl/Settings.bundle/Root.plist
+++ b/Night Owl/Settings.bundle/Root.plist
@@ -6,11 +6,13 @@
 	<array>
 		<dict>
 			<key>Type</key>
-			<string>PSTextFieldSpecifier</string>
+			<string>PSTitleValueSpecifier</string>
 			<key>Title</key>
 			<string>Version</string>
 			<key>Key</key>
 			<string>VersionNumber</string>
+			<key>DefaultValue</key>
+			<string></string>
 		</dict>
 	</array>
 	<key>StringsTable</key>
